--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Assignment 1</title>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-		<script src="app.js"></script>
+		<script src="js/app.js"></script>
 
 	</head>
 	<body ng-app="LunchCheck">
